glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/media-types.glx
media_types:
  photo:
    label: "Photo"


